# filament-rendering

./: CMakeLists.txt  README.md  cocoa_helper.h  cocoa_helper.mm  main.cpp  setup.sh
Assets/Models/: balls.glb  icoball.glb  monkey.fbx
FilamentSDL/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  input.cpp  input.h  main.cpp  native_window_helper.cpp  native_window_helper.h  native_window_helper_cocoa.mm  renderer.cpp  renderer.h  window.cpp  window.h
FilamentSDL/Materials/: lit_color.mat
